C_PREREQ(2.5)
AC_INIT(pacbox, [0.0.1], [john.grahn82@home.se])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/main.c])
# AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([Makefile
						src/Makefile])
AC_OUTPUT

